; ModuleID = '/home/carl/AnghaBench/openwrt/package/system/mtd/src/extr_jffs2.c_add_data.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/system/mtd/src/extr_jffs2.c_add_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ofs = common dso_local global i64 0, align 8
@erasesize = common dso_local global i64 0, align 8
@buf = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @add_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_data(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @ofs, align 8
  %6 = load i32, i32* %4, align 4
  %7 = sext i32 %6 to i64
  %8 = add nsw i64 %5, %7
  %9 = load i64, i64* @erasesize, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i64, i64* @erasesize, align 8
  %13 = call i32 @pad(i64 %12)
  %14 = call i32 (...) @prep_eraseblock()
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i64, i64* @buf, align 8
  %17 = load i64, i64* @ofs, align 8
  %18 = add nsw i64 %16, %17
  %19 = load i8*, i8** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @memcpy(i64 %18, i8* %19, i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = load i64, i64* @ofs, align 8
  %25 = add nsw i64 %24, %23
  store i64 %25, i64* @ofs, align 8
  ret void
}

declare dso_local i32 @pad(i64) #1

declare dso_local i32 @prep_eraseblock(...) #1

declare dso_local i32 @memcpy(i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
